--- a/main.ipynb
+++ b/main.ipynb
@@ -510,6 +510,42 @@
     "val_predictions = melbourne_model.predict(val_X)\n",
     "print(mean_absolute_error(val_y, val_predictions))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_mae(max_leaf_nodes, train_X, val_X, train_y, val_y):\n",
+    "    model = DecisionTreeRegressor(max_leaf_nodes=max_leaf_nodes, random_state=0)\n",
+    "    model.fit(train_X, train_y)\n",
+    "    preds_val = model.predict(val_X)\n",
+    "    mae = mean_absolute_error(val_y, preds_val)\n",
+    "    return mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max leaf nodes: 5 \t\t Mean Absolute Error:  385696.54278937966\n",
+      "Max leaf nodes: 50 \t\t Mean Absolute Error:  279794.61143891385\n",
+      "Max leaf nodes: 500 \t\t Mean Absolute Error:  261718.1134423186\n",
+      "Max leaf nodes: 5000 \t\t Mean Absolute Error:  271320.97310092533\n"
+     ]
+    }
+   ],
+   "source": [
+    "for max_leaf_nodes in [5, 50, 500, 5000]:\n",
+    "    my_mae = get_mae(max_leaf_nodes, train_X, val_X, train_y, val_y)\n",
+    "    print('Max leaf nodes: %d \\t\\t Mean Absolute Error: ' %max_leaf_nodes, my_mae)"
+   ]
   }
  ],
  "metadata": {
